unpackaged/objects/copadovsm__Value_Stream_Map_Configuration__c.object
<CustomObject>
	<fields>
		<fullName>copadovsm__DataJson__c</fullName>
		<label>DataJson</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copadovsm__Scope__c</fullName>
		<formula>IF( ISNULL(copadovsm__User__c), &apos;Public&apos;, &apos;User&apos; )</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Scope</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadovsm__Type__c</fullName>
		<label>Type</label>
		<required>true</required>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Metrics Visibility and Order</fullName>
				</value>
				<value>
					<fullName>Threshold</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copadovsm__User__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>User</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Value_Stream_Map_Configuration</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copadovsm__Value_Stream_Map__c</fullName>
		<label>Value Stream Map</label>
		<referenceTo>copadovsm__Value_Stream_Map__c</referenceTo>
		<relationshipLabel>Value_Stream_Map_Configuration</relationshipLabel>
		<relationshipName>Value_Stream_Map_Configuration</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<label>Value Stream Map Configuration</label>
	<nameField>
		<displayFormat>CVC-{00000}</displayFormat>
		<label>Value Stream Map Configuration Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Value Stream Map Configurations</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>